force-app/main/default/objects/Images__c/Images__c.object-meta.xml
<CustomObject>
    <label>Images</label>
    <nameField>
        <displayFormat>IMG-{0000000}</displayFormat>
        <label>Image No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>