force-app/main/default/objects/Images__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>GFERP__Item__c</referenceTo>
    <relationshipName>SFCC_Images</relationshipName>
    <type>Lookup</type>
</CustomField>