force-app/main/default/objects/Images__c/fields/Item_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Item_Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item Unit of Measure</label>
    <referenceTo>GFERP__Item_Unit_of_Measure__c</referenceTo>
    <relationshipName>SFCC_Images</relationshipName>
    <type>Lookup</type>
</CustomField>