force-app/main/default/objects/Images__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <formula>IF(NOT(ISBLANK(Item__c)), Item__r.Name +&quot;_&quot; ,&apos;&apos;)  + IF(NOT(ISBLANK(Item_Unit_of_Measure__c )), Item_Unit_of_Measure__r.Name +&apos;_&apos; ,&apos;&apos;) + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Path</label>
    <type>Text</type>
</CustomField>