force-app/main/default/objects/Images__c/fields/Uploaded_to_CC__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_to_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uploaded to CC</label>
    <type>Checkbox</type>
</CustomField>