force-app/main/default/objects/Images__c/fields/Uploaded_to_CC_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_to_CC_Date_Time__c</fullName>
    <label>Uploaded to CC Date/Time</label>
    <type>DateTime</type>
</CustomField>