force-app/main/default/objects/Images__c/fields/Variation_Value__c.field-meta.xml
<CustomField>
    <fullName>Variation_Value__c</fullName>
    <label>Variation Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>