force-app/main/default/objects/Images__c/fields/View_Type__c.field-meta.xml
<CustomField>
    <fullName>View_Type__c</fullName>
    <label>View Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Large</fullName>
                <default>true</default>
                <label>Large</label>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>